# TextEditor

./: CMakeLists.txt  editor.desktop  textEditorConfig.h
.github/workflows/: main.yml
i18n/: TextEditor_es_DO.ts
icons/: icons.qrc
src/: CMakeLists.txt  main.cpp  main.cpp.in  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  textEditorConfig.h  textEditorConfig.h.in  texteditor.cpp  texteditor.h  texteditor.ui
